// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SparklineChart should render component 1`] = `
<svg
  baseProfile="full"
  height="300"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="300"
    id="0"
    width="0"
    x="0"
    y="0"
  />
  <g>
    <g
      clip-path="url(#zr0-c0)"
    >
      <path
        d="M0 238.8C0 238.8 0 209.2 0 179.6C0 150 0 150 0 120.4C0 90.8 0 90.8 0 61.2C0 31.6 0 2 0 2L0 298Z"
        fill="url(#zr0-g0)"
        fill-opacity="0.7"
      />
      <path
        d="M0 238.8C0 238.8 0 209.2 0 179.6C0 150 0 150 0 120.4C0 90.8 0 90.8 0 61.2C0 31.6 0 2 0 2"
        fill="none"
        stroke="#23AB36"
        stroke-linejoin="bevel"
        stroke-width="0.8"
      />
    </g>
  </g>
  <defs>
    <clippath
      id="zr0-c0"
    >
      <path
        d="M-1 1.6l0 0l0 296.8l0 0Z"
        fill="#000"
      />
    </clippath>
    <lineargradient
      gradientUnits="objectBoundingBox"
      id="zr0-g0"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#88D392"
      />
      <stop
        offset="100%"
        stop-color="#FFFFFF"
      />
    </lineargradient>
  </defs>
</svg>
`;

exports[`SparklineChart should render component with trendLine having green 1`] = `
<svg
  baseProfile="full"
  height="300"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="300"
    id="0"
    width="0"
    x="0"
    y="0"
  />
  <g>
    <g
      clip-path="url(#zr2-c0)"
    >
      <path
        d="M0 248.6667C0 248.6667 0 224 0 199.3333C0 174.6667 0 174.6667 0 150C0 125.3333 0 125.3333 0 100.6667C0 76 0 76 0 51.3333C0 26.6667 0 2 0 2L0 298Z"
        fill="url(#zr2-g0)"
        fill-opacity="0.7"
      />
      <path
        d="M0 248.6667C0 248.6667 0 224 0 199.3333C0 174.6667 0 174.6667 0 150C0 125.3333 0 125.3333 0 100.6667C0 76 0 76 0 51.3333C0 26.6667 0 2 0 2"
        fill="none"
        stroke="#23AB36"
        stroke-linejoin="bevel"
        stroke-width="0.8"
      />
    </g>
  </g>
  <defs>
    <clippath
      id="zr2-c0"
    >
      <path
        d="M-1 1.6l0 0l0 296.8l0 0Z"
        fill="#000"
      />
    </clippath>
    <lineargradient
      gradientUnits="objectBoundingBox"
      id="zr2-g0"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#88D392"
      />
      <stop
        offset="100%"
        stop-color="#FFFFFF"
      />
    </lineargradient>
  </defs>
</svg>
`;

exports[`SparklineChart should render component with trendLine having red 1`] = `
<svg
  baseProfile="full"
  height="300"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="300"
    id="0"
    width="0"
    x="0"
    y="0"
  />
  <g>
    <g
      clip-path="url(#zr1-c0)"
    >
      <path
        d="M0 238.8C0 238.8 0 209.2 0 179.6C0 150 0 150 0 120.4C0 90.8 0 90.8 0 61.2C0 31.6 0 2 0 2C0 2 0 298 0 298Z"
        fill="url(#zr1-g0)"
        fill-opacity="0.7"
      />
      <path
        d="M0 238.8C0 238.8 0 209.2 0 179.6C0 150 0 150 0 120.4C0 90.8 0 90.8 0 61.2C0 31.6 0 2 0 2C0 2 0 298 0 298"
        fill="none"
        stroke="#ED1C24"
        stroke-linejoin="bevel"
        stroke-width="0.8"
      />
    </g>
  </g>
  <defs>
    <clippath
      id="zr1-c0"
    >
      <path
        d="M-1 1.6l0 0l0 296.8l0 0Z"
        fill="#000"
      />
    </clippath>
    <lineargradient
      gradientUnits="objectBoundingBox"
      id="zr1-g0"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#F4777C"
      />
      <stop
        offset="100%"
        stop-color="#FFFFFF"
      />
    </lineargradient>
  </defs>
</svg>
`;
